// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`runtime aggregate contracts > preserves built-in provider identity and order > provider-ids 1`] = `
[
  "free",
  "gemini",
  "openrouter",
  "openai",
  "anthropic",
  "nvidia",
  "agentrouter",
  "aws-mantle",
  "ollama",
  "bynara",
  "qwen-cloud",
  "modal",
  "lightning",
  "tokenrouter",
  "meta",
  "fireworks",
  "hetzner",
  "orcarouter",
  "merge-gateway",
]
`;

exports[`runtime aggregate contracts > preserves each tool's parameter property order and flags > tool-schema-order 1`] = `
[
  {
    "askMode": true,
    "mutates": false,
    "name": "fs.read",
    "properties": [
      "path",
      "offset",
      "limit",
      "startLine",
      "endLine",
      "pattern",
      "context",
      "maxMatches",
      "caseInsensitive",
      "maxBytes",
    ],
    "readOnly": true,
    "required": [
      "path",
    ],
  },
  {
    "askMode": false,
    "mutates": true,
    "name": "fs.write",
    "properties": [
      "path",
      "content",
    ],
    "readOnly": false,
    "required": [
      "path",
      "content",
    ],
  },
  {
    "askMode": false,
    "mutates": true,
    "name": "fs.writeMany",
    "properties": [
      "files",
    ],
    "readOnly": false,
    "required": [
      "files",
    ],
  },
  {
    "askMode": true,
    "mutates": false,
    "name": "fs.list",
    "properties": [
      "path",
      "maxEntries",
    ],
    "readOnly": true,
    "required": [],
  },
  {
    "askMode": true,
    "mutates": false,
    "name": "fs.search",
    "properties": [
      "pattern",
      "path",
      "maxMatches",
      "maxPerFile",
      "glob",
      "caseInsensitive",
      "fixedString",
      "context",
      "filesOnly",
      "hidden",
      "timeoutMs",
    ],
    "readOnly": true,
    "required": [
      "pattern",
    ],
  },
  {
    "askMode": false,
    "mutates": true,
    "name": "fs.edit",
    "properties": [
      "path",
      "oldText",
      "newText",
      "expectedReplacements",
    ],
    "readOnly": false,
    "required": [
      "path",
      "oldText",
      "newText",
    ],
  },
  {
    "askMode": false,
    "mutates": true,
    "name": "fs.replaceLines",
    "properties": [
      "path",
      "startLine",
      "endLine",
      "content",
      "delete",
    ],
    "readOnly": false,
    "required": [
      "path",
      "startLine",
      "endLine",
    ],
  },
  {
    "askMode": false,
    "mutates": true,
    "name": "fs.append",
    "properties": [
      "path",
      "content",
      "position",
      "expectedPriorBytes",
    ],
    "readOnly": false,
    "required": [
      "path",
      "content",
    ],
  },
  {
    "askMode": false,
    "mutates": true,
    "name": "fs.delete",
    "properties": [
      "path",
      "recursive",
    ],
    "readOnly": false,
    "required": [
      "path",
    ],
  },
  {
    "askMode": false,
    "mutates": true,
    "name": "shell.exec",
    "properties": [
      "command",
      "cwd",
      "timeoutMs",
      "background",
      "responder",
      "parentTaskId",
    ],
    "readOnly": false,
    "required": [
      "command",
    ],
  },
  {
    "askMode": false,
    "mutates": true,
    "name": "shell.start",
    "properties": [
      "command",
      "cwd",
      "name",
    ],
    "readOnly": false,
    "required": [
      "command",
    ],
  },
  {
    "askMode": false,
    "mutates": false,
    "name": "shell.jobs",
    "properties": [],
    "readOnly": true,
    "required": [],
  },
  {
    "askMode": false,
    "mutates": false,
    "name": "shell.tail",
    "properties": [
      "id",
      "bytes",
      "offset",
      "stream",
    ],
    "readOnly": true,
    "required": [
      "id",
    ],
  },
  {
    "askMode": false,
    "mutates": true,
    "name": "shell.stop",
    "properties": [
      "id",
    ],
    "readOnly": false,
    "required": [
      "id",
    ],
  },
  {
    "askMode": false,
    "mutates": false,
    "name": "shell.wait",
    "properties": [
      "id",
      "timeoutMs",
    ],
    "readOnly": true,
    "required": [
      "id",
    ],
  },
  {
    "askMode": false,
    "mutates": true,
    "name": "pkg.install",
    "properties": [
      "tool",
      "checkBinary",
      "timeoutMs",
    ],
    "readOnly": false,
    "required": [
      "tool",
    ],
  },
  {
    "askMode": false,
    "mutates": true,
    "name": "net.scan",
    "properties": [
      "target",
      "ports",
      "profile",
      "flags",
      "background",
      "responder",
      "parentTaskId",
      "timeoutMs",
    ],
    "readOnly": false,
    "required": [
      "target",
    ],
  },
  {
    "askMode": true,
    "mutates": false,
    "name": "net.context",
    "properties": [],
    "readOnly": true,
    "required": [],
  },
  {
    "askMode": false,
    "mutates": false,
    "name": "net.pingSweep",
    "properties": [
      "target",
      "method",
      "timeoutMs",
    ],
    "readOnly": true,
    "required": [
      "target",
    ],
  },
  {
    "askMode": true,
    "mutates": false,
    "name": "http.fetch",
    "properties": [
      "url",
      "method",
      "body",
      "headers",
      "maxBytes",
      "iOwnThis",
      "own",
      "retries",
      "timeoutMs",
      "responseMode",
      "responsePart",
      "bottomLines",
      "maxOutputBytes",
      "forwardSensitiveHeaders",
      "insecureTls",
      "tlsInsecure",
    ],
    "readOnly": true,
    "required": [
      "url",
    ],
  },
  {
    "askMode": true,
    "mutates": false,
    "name": "dns.lookup",
    "properties": [
      "target",
      "record",
      "timeoutMs",
    ],
    "readOnly": true,
    "required": [
      "target",
    ],
  },
  {
    "askMode": true,
    "mutates": false,
    "name": "whois.lookup",
    "properties": [
      "target",
      "timeoutMs",
    ],
    "readOnly": true,
    "required": [
      "target",
    ],
  },
  {
    "askMode": false,
    "mutates": true,
    "name": "pentest.recon",
    "properties": [
      "target",
      "whois",
      "dns",
      "nmap",
      "topPorts",
      "ports",
      "full",
      "background",
      "responder",
      "parentTaskId",
      "timeoutMs",
    ],
    "readOnly": false,
    "required": [
      "target",
    ],
  },
  {
    "askMode": false,
    "mutates": false,
    "name": "pentest.webDiscover",
    "properties": [
      "baseUrl",
      "paths",
      "timeoutMs",
    ],
    "readOnly": true,
    "required": [
      "baseUrl",
    ],
  },
  {
    "askMode": false,
    "mutates": false,
    "name": "pentest.apiEnumerate",
    "properties": [
      "specUrl",
      "timeoutMs",
    ],
    "readOnly": true,
    "required": [
      "specUrl",
    ],
  },
  {
    "askMode": false,
    "mutates": false,
    "name": "pentest.authCompare",
    "properties": [
      "url",
      "contexts",
      "timeoutMs",
    ],
    "readOnly": true,
    "required": [
      "url",
      "contexts",
    ],
  },
  {
    "askMode": false,
    "mutates": false,
    "name": "pentest.scanStatus",
    "properties": [
      "id",
      "offset",
      "bytes",
      "stream",
      "target",
      "timeoutMs",
    ],
    "readOnly": true,
    "required": [
      "id",
      "target",
    ],
  },
  {
    "askMode": true,
    "mutates": false,
    "name": "web.search",
    "properties": [
      "query",
      "maxResults",
      "fetchTop",
      "timeoutMs",
    ],
    "readOnly": true,
    "required": [
      "query",
    ],
  },
  {
    "askMode": true,
    "mutates": false,
    "name": "web.fetch",
    "properties": [
      "url",
      "maxBytes",
      "includeHeaders",
      "includeTls",
      "includeTiming",
      "includeRedirectChain",
      "responseMode",
      "responsePart",
      "topLines",
      "bottomLines",
      "maxOutputBytes",
      "redactSensitive",
      "timeoutMs",
    ],
    "readOnly": true,
    "required": [
      "url",
    ],
  },
  {
    "askMode": true,
    "mutates": false,
    "name": "sysinfo",
    "properties": [],
    "readOnly": true,
    "required": [],
  },
  {
    "askMode": true,
    "mutates": false,
    "name": "tool.check",
    "properties": [
      "tools",
      "timeoutMs",
    ],
    "readOnly": true,
    "required": [
      "tools",
    ],
  },
  {
    "askMode": true,
    "mutates": false,
    "name": "tool.batch",
    "properties": [
      "calls",
      "concurrency",
      "on_fail",
      "timeoutMs",
    ],
    "readOnly": true,
    "required": [
      "calls",
    ],
  },
  {
    "askMode": false,
    "mutates": false,
    "name": "wordlist.find",
    "properties": [
      "query",
      "expand",
    ],
    "readOnly": true,
    "required": [
      "query",
    ],
  },
  {
    "askMode": true,
    "mutates": false,
    "name": "image.ocr",
    "properties": [
      "path",
      "lang",
      "psm",
      "preprocess",
      "timeoutMs",
    ],
    "readOnly": true,
    "required": [
      "path",
    ],
  },
  {
    "askMode": true,
    "mutates": false,
    "name": "image.view",
    "properties": [
      "path",
      "paths",
    ],
    "readOnly": true,
    "required": [],
  },
  {
    "askMode": true,
    "mutates": false,
    "name": "pdf.read",
    "properties": [
      "path",
      "firstPage",
      "lastPage",
      "maxPages",
      "ocr",
      "lang",
      "dpi",
      "psm",
      "maxChars",
      "timeoutMs",
    ],
    "readOnly": true,
    "required": [
      "path",
    ],
  },
  {
    "askMode": true,
    "mutates": false,
    "name": "skill.load",
    "properties": [
      "name",
    ],
    "readOnly": true,
    "required": [
      "name",
    ],
  },
  {
    "askMode": true,
    "mutates": false,
    "name": "skill.list",
    "properties": [
      "query",
    ],
    "readOnly": true,
    "required": [],
  },
  {
    "askMode": false,
    "mutates": true,
    "name": "instructions.record",
    "properties": [
      "add",
      "remove",
    ],
    "readOnly": false,
    "required": [],
  },
  {
    "askMode": false,
    "mutates": true,
    "name": "plan.clear",
    "properties": [],
    "readOnly": false,
    "required": [],
  },
  {
    "askMode": false,
    "mutates": true,
    "name": "plan.create",
    "properties": [
      "goal",
      "detail",
      "tasks",
      "kind",
    ],
    "readOnly": false,
    "required": [
      "goal",
      "tasks",
      "kind",
    ],
  },
  {
    "askMode": false,
    "mutates": true,
    "name": "task.add",
    "properties": [
      "title",
      "parentTaskId",
      "dependencies",
      "resourceLocks",
      "note",
      "acceptanceCriteria",
    ],
    "readOnly": false,
    "required": [
      "title",
    ],
  },
  {
    "askMode": false,
    "mutates": true,
    "name": "task.move",
    "properties": [
      "taskId",
      "position",
      "beforeTaskId",
      "afterTaskId",
    ],
    "readOnly": false,
    "required": [
      "taskId",
    ],
  },
  {
    "askMode": false,
    "mutates": true,
    "name": "job.read",
    "properties": [
      "jobId",
      "notificationId",
    ],
    "readOnly": false,
    "required": [],
  },
  {
    "askMode": false,
    "mutates": true,
    "name": "task.read",
    "properties": [
      "notificationId",
    ],
    "readOnly": false,
    "required": [
      "notificationId",
    ],
  },
  {
    "askMode": false,
    "mutates": true,
    "name": "task.update",
    "properties": [
      "taskId",
      "state",
      "note",
    ],
    "readOnly": false,
    "required": [
      "taskId",
      "state",
    ],
  },
  {
    "askMode": false,
    "mutates": false,
    "name": "agent.handoff",
    "properties": [
      "task",
      "reason",
    ],
    "readOnly": false,
    "required": [
      "task",
      "reason",
    ],
  },
  {
    "askMode": false,
    "mutates": false,
    "name": "loop.reset",
    "properties": [],
    "readOnly": false,
    "required": [],
  },
  {
    "askMode": true,
    "mutates": false,
    "name": "mcp.list",
    "properties": [],
    "readOnly": true,
    "required": [],
  },
  {
    "askMode": true,
    "mutates": false,
    "name": "mcp.tools",
    "properties": [
      "server",
    ],
    "readOnly": true,
    "required": [],
  },
  {
    "askMode": false,
    "mutates": true,
    "name": "mcp.enable",
    "properties": [
      "server",
      "servers",
    ],
    "readOnly": false,
    "required": [],
  },
  {
    "askMode": false,
    "mutates": true,
    "name": "mcp.connect",
    "properties": [
      "server",
    ],
    "readOnly": false,
    "required": [
      "server",
    ],
  },
  {
    "askMode": false,
    "mutates": true,
    "name": "mcp.login",
    "properties": [
      "server",
    ],
    "readOnly": false,
    "required": [
      "server",
    ],
  },
  {
    "askMode": false,
    "mutates": true,
    "name": "terminal.start",
    "properties": [
      "command",
      "cwd",
      "terminalMode",
      "columns",
      "rows",
      "idleTimeoutMs",
      "lifetimeTimeoutMs",
      "deadlineMs",
    ],
    "readOnly": false,
    "required": [
      "command",
    ],
  },
  {
    "askMode": false,
    "mutates": true,
    "name": "terminal.send",
    "properties": [
      "id",
      "kind",
      "text",
      "secretPrompt",
      "submit",
      "control",
      "cursor",
      "quietMs",
      "deadlineMs",
      "view",
    ],
    "readOnly": false,
    "required": [
      "id",
      "kind",
    ],
  },
  {
    "askMode": false,
    "mutates": false,
    "name": "terminal.read",
    "properties": [
      "id",
      "cursor",
      "waitMs",
      "view",
    ],
    "readOnly": true,
    "required": [
      "id",
      "cursor",
    ],
  },
  {
    "askMode": false,
    "mutates": false,
    "name": "terminal.status",
    "properties": [
      "id",
    ],
    "readOnly": true,
    "required": [
      "id",
    ],
  },
  {
    "askMode": false,
    "mutates": false,
    "name": "terminal.list",
    "properties": [],
    "readOnly": true,
    "required": [],
  },
  {
    "askMode": false,
    "mutates": true,
    "name": "terminal.resize",
    "properties": [
      "id",
      "columns",
      "rows",
    ],
    "readOnly": false,
    "required": [
      "id",
      "columns",
      "rows",
    ],
  },
  {
    "askMode": false,
    "mutates": true,
    "name": "terminal.close",
    "properties": [
      "id",
      "deadlineMs",
    ],
    "readOnly": false,
    "required": [
      "id",
    ],
  },
]
`;

exports[`runtime aggregate contracts > preserves slash command names, usage, and order > slash-command-catalog 1`] = `
[
  {
    "command": "/ask",
    "usage": null,
  },
  {
    "command": "/agent",
    "usage": null,
  },
  {
    "command": "/model",
    "usage": "[name|#]",
  },
  {
    "command": "/models",
    "usage": "[filter]",
  },
  {
    "command": "/provider",
    "usage": "[name]",
  },
  {
    "command": "/set",
    "usage": "[provider] [key]",
  },
  {
    "command": "/unset",
    "usage": "[provider]",
  },
  {
    "command": "/keys",
    "usage": null,
  },
  {
    "command": "/info",
    "usage": "[provider]",
  },
  {
    "command": "/search",
    "usage": "[provider]",
  },
  {
    "command": "/search-provider",
    "usage": "[provider]",
  },
  {
    "command": "/effort",
    "usage": "[on|off|none|minimal|low|medium|high|xhigh|max]",
  },
  {
    "command": "/reasoning",
    "usage": "[on|off|none|minimal|low|medium|high|xhigh|max]",
  },
  {
    "command": "/clear",
    "usage": null,
  },
  {
    "command": "/new",
    "usage": null,
  },
  {
    "command": "/history",
    "usage": "[delete <id>]",
  },
  {
    "command": "/save",
    "usage": "<name>",
  },
  {
    "command": "/reset",
    "usage": null,
  },
  {
    "command": "/cwd",
    "usage": "<path>",
  },
  {
    "command": "/allow",
    "usage": "<tool>|list",
  },
  {
    "command": "/disallow",
    "usage": "<tool>",
  },
  {
    "command": "/think",
    "usage": null,
  },
  {
    "command": "/thinking",
    "usage": null,
  },
  {
    "command": "/output",
    "usage": "[last|<id>|list]",
  },
  {
    "command": "/jobs",
    "usage": "/jobs",
  },
  {
    "command": "/freeonly",
    "usage": "[on|off]",
  },
  {
    "command": "/fallback",
    "usage": "[on|off]",
  },
  {
    "command": "/skills",
    "usage": "[name|list|refresh]",
  },
  {
    "command": "/mcp",
    "usage": "[server|all|off|list|status|tools [server]|locations|refresh|reconnect <server>|login <server>|add [json|notion]]",
  },
  {
    "command": "/compact",
    "usage": null,
  },
  {
    "command": "/context",
    "usage": null,
  },
  {
    "command": "/usage",
    "usage": null,
  },
  {
    "command": "/plan",
    "usage": "[view|off]",
  },
  {
    "command": "/implement",
    "usage": null,
  },
  {
    "command": "/discard",
    "usage": null,
  },
  {
    "command": "/scope",
    "usage": "[show|clear|new|add <targets>]",
  },
  {
    "command": "/privacy",
    "usage": "[status|clear-history|clear-logs|clear-artifacts|clear-all|on|off]",
  },
  {
    "command": "/permissions",
    "usage": "[default|allow-all]",
  },
  {
    "command": "/update",
    "usage": null,
  },
  {
    "command": "/minimise",
    "usage": null,
  },
  {
    "command": "/minimize",
    "usage": null,
  },
  {
    "command": "/exit",
    "usage": null,
  },
  {
    "command": "/quit",
    "usage": null,
  },
  {
    "command": "/help",
    "usage": null,
  },
  {
    "command": "/shortcuts",
    "usage": null,
  },
]
`;

exports[`runtime aggregate contracts > preserves the special-purpose tool name sets > non-registry-tool-names 1`] = `
[
  "agent.handoff",
  "job.read",
  "loop.reset",
  "mcp.connect",
  "mcp.enable",
  "mcp.list",
  "mcp.login",
  "mcp.tools",
  "plan.clear",
  "plan.create",
  "task.add",
  "task.move",
  "task.read",
  "task.update",
]
`;

exports[`runtime aggregate contracts > preserves the special-purpose tool name sets > plan-tool-names 1`] = `
[
  "plan.clear",
  "plan.create",
  "task.add",
  "task.move",
  "task.read",
  "task.update",
]
`;

exports[`runtime aggregate contracts > preserves the special-purpose tool name sets > responder-tool-names 1`] = `
[
  "job.read",
]
`;

exports[`runtime aggregate contracts > preserves the special-purpose tool name sets > runner-meta-tool-names 1`] = `
[
  "job.read",
  "plan.clear",
  "plan.create",
  "task.add",
  "task.move",
  "task.read",
  "task.update",
]
`;

exports[`runtime aggregate contracts > preserves tool names, wire names, and their declared order > tool-definition-order 1`] = `
[
  {
    "name": "fs.read",
    "wireName": "fs_read",
  },
  {
    "name": "fs.write",
    "wireName": "fs_write",
  },
  {
    "name": "fs.writeMany",
    "wireName": "fs_writeMany",
  },
  {
    "name": "fs.list",
    "wireName": "fs_list",
  },
  {
    "name": "fs.search",
    "wireName": "fs_search",
  },
  {
    "name": "fs.edit",
    "wireName": "fs_edit",
  },
  {
    "name": "fs.replaceLines",
    "wireName": "fs_replaceLines",
  },
  {
    "name": "fs.append",
    "wireName": "fs_append",
  },
  {
    "name": "fs.delete",
    "wireName": "fs_delete",
  },
  {
    "name": "shell.exec",
    "wireName": "shell_exec",
  },
  {
    "name": "shell.start",
    "wireName": "shell_start",
  },
  {
    "name": "shell.jobs",
    "wireName": "shell_jobs",
  },
  {
    "name": "shell.tail",
    "wireName": "shell_tail",
  },
  {
    "name": "shell.stop",
    "wireName": "shell_stop",
  },
  {
    "name": "shell.wait",
    "wireName": "shell_wait",
  },
  {
    "name": "pkg.install",
    "wireName": "pkg_install",
  },
  {
    "name": "net.scan",
    "wireName": "net_scan",
  },
  {
    "name": "net.context",
    "wireName": "net_context",
  },
  {
    "name": "net.pingSweep",
    "wireName": "net_pingSweep",
  },
  {
    "name": "http.fetch",
    "wireName": "http_fetch",
  },
  {
    "name": "dns.lookup",
    "wireName": "dns_lookup",
  },
  {
    "name": "whois.lookup",
    "wireName": "whois_lookup",
  },
  {
    "name": "pentest.recon",
    "wireName": "pentest_recon",
  },
  {
    "name": "pentest.webDiscover",
    "wireName": "pentest_webDiscover",
  },
  {
    "name": "pentest.apiEnumerate",
    "wireName": "pentest_apiEnumerate",
  },
  {
    "name": "pentest.authCompare",
    "wireName": "pentest_authCompare",
  },
  {
    "name": "pentest.scanStatus",
    "wireName": "pentest_scanStatus",
  },
  {
    "name": "web.search",
    "wireName": "web_search",
  },
  {
    "name": "web.fetch",
    "wireName": "web_fetch",
  },
  {
    "name": "sysinfo",
    "wireName": "sysinfo",
  },
  {
    "name": "tool.check",
    "wireName": "tool_check",
  },
  {
    "name": "tool.batch",
    "wireName": "tool_batch",
  },
  {
    "name": "wordlist.find",
    "wireName": "wordlist_find",
  },
  {
    "name": "image.ocr",
    "wireName": "image_ocr",
  },
  {
    "name": "image.view",
    "wireName": "image_view",
  },
  {
    "name": "pdf.read",
    "wireName": "pdf_read",
  },
  {
    "name": "skill.load",
    "wireName": "skill_load",
  },
  {
    "name": "skill.list",
    "wireName": "skill_list",
  },
  {
    "name": "instructions.record",
    "wireName": "instructions_record",
  },
  {
    "name": "plan.clear",
    "wireName": "plan_clear",
  },
  {
    "name": "plan.create",
    "wireName": "plan_create",
  },
  {
    "name": "task.add",
    "wireName": "task_add",
  },
  {
    "name": "task.move",
    "wireName": "task_move",
  },
  {
    "name": "job.read",
    "wireName": "job_read",
  },
  {
    "name": "task.read",
    "wireName": "task_read",
  },
  {
    "name": "task.update",
    "wireName": "task_update",
  },
  {
    "name": "agent.handoff",
    "wireName": "agent_handoff",
  },
  {
    "name": "loop.reset",
    "wireName": "loop_reset",
  },
  {
    "name": "mcp.list",
    "wireName": "mcp_list",
  },
  {
    "name": "mcp.tools",
    "wireName": "mcp_tools",
  },
  {
    "name": "mcp.enable",
    "wireName": "mcp_enable",
  },
  {
    "name": "mcp.connect",
    "wireName": "mcp_connect",
  },
  {
    "name": "mcp.login",
    "wireName": "mcp_login",
  },
  {
    "name": "terminal.start",
    "wireName": "terminal_start",
  },
  {
    "name": "terminal.send",
    "wireName": "terminal_send",
  },
  {
    "name": "terminal.read",
    "wireName": "terminal_read",
  },
  {
    "name": "terminal.status",
    "wireName": "terminal_status",
  },
  {
    "name": "terminal.list",
    "wireName": "terminal_list",
  },
  {
    "name": "terminal.resize",
    "wireName": "terminal_resize",
  },
  {
    "name": "terminal.close",
    "wireName": "terminal_close",
  },
]
`;
